src/test/ui/range/range-inclusive-pattern-precedence2.stderr
error: the range pattern here has ambiguous interpretation
  --> $DIR/range-inclusive-pattern-precedence2.rs:14:13
   |
LL |         box 10..=15 => {}
   |             ^^^^^^^ help: add parentheses to clarify the precedence: `(10 ..=15)`

warning: `...` range patterns are deprecated
  --> $DIR/range-inclusive-pattern-precedence2.rs:10:14
   |
LL |         box 0...9 => {}
   |              ^^^ help: use `..=` for an inclusive range
   |
note: the lint level is defined here
  --> $DIR/range-inclusive-pattern-precedence2.rs:5:9
   |
LL | #![warn(ellipsis_inclusive_range_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2021 edition!
   = note: for more information, see issue #80165 <https://github.com/rust-lang/rust/issues/80165>

error: aborting due to previous error; 1 warning emitted

